# CROC-AI-SYSTEMS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  COORDINATION.md  EXTENSIBILITY.md  INVESTOR.md  MAIC_ARTIFACT_NOTICE.md  MAIC_SUBMISSION.md  ORCHESTRATOR.md  PRODUCT_OVERVIEW.md
samples/orchestrator/: alarm_event.json  sample_workflow.json
samples/sentinel/: demo_alarm_event.json  device_telemetry_sample.json
scripts/: publish-github.ps1
src/: __init__.py
src/croc_orchestrator/: __init__.py  agent_stub.py  coordination_edge.py  demo_assess.py  workflow_sample.py
src/croc_sentinel/: __init__.py  mqtt_event_stub.py
