[project]
name = "croc-ai-systems"
version = "0.1.0"
description = "CROC AI Systems — public artifact (Croc Sentinel + Croc AI Orchestrator, MAIC)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
croc-demo-assess = "src.croc_orchestrator.demo_assess:main"
